Fixed overflow hidden on main-container, so the map report is hidden when off screen

--- a/app/styles/_pages.less
+++ b/app/styles/_pages.less
@@ -580,7 +580,8 @@ body {
 #main-content {
   height: 100%;
   *height: auto;
-  .box-shadow(@shadow);
+  overflow: hidden;
+  // .box-shadow(@shadow);
   .inner {
     padding: 20px;
     height: 100%;
